pipeline/k8s/viewer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tweet-viewer
  namespace: pipeline
  labels:
    app: tweet-viewer
    demo: pipeline
spec:
  selector:
    matchLabels:
      app: tweet-viewer
  template:
    metadata:
      labels:
        app: tweet-viewer
        demo: pipeline
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "tweet-viewer"
        dapr.io/app-protocol: "http"
        dapr.io/app-port: "8084"
        dapr.io/config: "space-config"
        dapr.io/log-as-json: "true"
        dapr.io/log-level: "debug"
    spec:
      containers:
      - name: service
        image: mchmarny/tweet-viewer:v0.11.1
        ports:
        - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: tweet-viewer
  namespace: pipeline
spec:
  selector:
    app: tweet-viewer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8084
