pipeline/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tweets-ingress-rules
  namespace: pipeline
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
      - tweets.demo.dapr.team
      secretName: tls-secret
  rules:
    - host: tweets.demo.dapr.team
      http:
        paths:
          - path: /
            backend:
              serviceName: tweet-viewer
              servicePort: 80
